--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -3,7 +3,7 @@
     font-size: 14px;
 }
 
-.contactForm {
+.form {
     margin-top: 30px;
     width: 250px;
     padding: 10px;
@@ -14,24 +14,22 @@
     border: 1px solid black;
     border-radius: 8px;
     gap: 15px;
-
-
 }
 
-.contactFormItem {
+.label {
     display: flex;
     flex-direction: column;
     width: 100%;
 }
 
-.contactFormInput {
+.input {
     display: flex;
     width: 100%;
     padding: 5px;
     box-sizing: border-box;
 }
 
-.BtnAdd {
+.submitBtn {
     background-color: rgb(222, 222, 222);
     width: 150px;
 }
